<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Live TV</string>
    <string name="loading_app">Loading Live TV</string>
    <string name="label_version">Version:</string>
    <string name="app_icon">For App Icon</string>
    <string name="err_unexpected">An unexpected error occurred. Please try again.</string>
    <string name="empty_text" />
    <string name="negative">negative</string>
    <string name="neutral">neutral</string>
    <string name="positive">positive</string>
    <string name="app_version">App Version:</string>
    <string name="mac_address">Mac Address:</string>
    <string name="error">ERROR</string>
    <string name="btn_reconnect">Re-connect</string>
    <string name="no_internet_title">No Connection</string>
    <string name="no_internet_body">Couldn\'t connect to the server. Please check your connection and try again.</string>
    <string name="btn_settings">Settings</string>
    <string name="msg_feature_not_available">This feature is not available.</string>
    <string name="err_json_exception">Could not fetch the required datas. Please contact your service provider!!!</string>
    <string name="user_not_registered">Your user id has not been registered into our system.\nPlease sign up first to use our services.</string>
    <string name="user_not_active">Your account has not been activated  yet.\nPlease contact your service provider to resolve  this issue.</string>
    <string name="user_not_approved">Your user account has not been approved .Please contact your service provider.</string>
    <string name="mac_not_registered">Your device has not been registered into our system.\nPlease contact your service provider and register device mac address to use our services</string>
    <string name="register_success_message">You have successfully registered to our system. Please check your email and click the activation link to complete your registration. \\n\\nYou can login to the system only after our team reviews your request once your have activated your account. This process might take time so you are requested to wait our email confirmation of your Registration approval.\\nIf you did not receive any email or face any other issue regarding registration process, please email us at info@artemisiaiofcaria.com</string>
    <string name="request_permissions"><![CDATA[LiveTV needs an access to your <b>Extenal Storage</b>.]]></string>
    <string name="msg_update">A new version of LiveTV is available.\n Download Now.</string>
    <string name="btn_update">Update</string>
    <string name="downloading">Downloading…</string>
    <string name="update">Update Found</string>
    <string name="dismiss">Dismiss</string>
    <string name="download">download</string>
    <string name="download_complete">File Download Completed</string>
    <string name="myaccount">AndroidTV MyAccount</string>
    <string name="download_account_header">Download AndroidTV MyAccount</string>
    <string name="download_myaccount">Download AndroidTV MyAccount</string>
    <string name="sign_in">Sign In</string>
    <string name="label_password">Password: </string>
    <string name="username">Username:</string>
    <string name="hint_password">Enter Password</string>
    <string name="btn_login">Sign In</string>
    <string name="login_btn_click_url">user/login</string>
    <string name="get_session_url">session/update</string>
    <string name="category_channel_url">livetv</string>
    <string name="group_data">user/group_json</string>
    <string name="check_login">user/checklogin</string>
    <string name="allow_country_url">other/geoblock</string>
    <string name="link_server_apk_url">https://middleware.yourman.info/market_app_info/api/market_app_info.php</string>
    <string name="channel_link_url">livetv/getchannels</string>
    <string name="preview_link">livetv/channel/preview</string>
    <string name="epg_url">epg</string>
    <string name="dvr_url">dvr/getdvr</string>
    <string name="set_fav_url">livetv/favorite/addfavorite</string>
    <string name="fav_channel_list">livetv/favorite/list</string>
    <string name="mac_exists">mac/exists</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_topup">TOPUP NOW</string>
    <string name="btn_watch">WATCH</string>
    <string name="btn_retry">RETRY</string>
    <string name="btn_dismiss">Dismiss</string>
    <string name="label_retry">Retry</string>
    <string name="label_username">Username :</string>
    <string name="hint_username">Your Email</string>
    <string name="label_current_balance">Account Balance :\t\t</string>
    <string name="label_channel_price_per_month">Channel Price per month :</string>
    <string name="label_time_to_buy">Time period for your buy :</string>
    <string name="label_total_price">Total Price :\t\t</string>
    <string name="label_mac">Mac Address: </string>
    <string name="txt_loading">Loading&#8230;</string>
    <string name="all_category">All Channels</string>
    <string name="category">Category</string>
    <string name="label_language">Language :</string>
    <string name="label_country">Country :</string>
    <string name="label_description">Description :</string>
    <string name="txt_language">language</string>
    <string name="txt_country">country</string>
    <string name="txt_description">description</string>
    <string name="banner_content_description">banner</string>
    <string name="msg_register_success">You have successfully registered to our system. Please check your email and click the activation link to complete your registration. \n\nYou can login to the system only after our team reviews your request once your have activated your account. This process might take time so you are requested to wait our email confirmation of your Registration approval.\nIf you did not receive any email or face any other issue regarding registration process, please email us at support@totalcable.c</string>
    <string name="msg_thank_you">Thank You.</string>
    <string name="msg_no_channels">Sorry, no channels found for this category</string>
    <string name="msg_multi_login">Multiple Login Detected -</string>
    <string name="err_file_data_does_not_match">Could not fetch the required datas. Please re-login</string>
    <string name="err_no_channels">Sorry you do not have access to any channels. Please buy channels From MyAccount App.</string>
    <string name="err_doublelogin"> is already logged in - \nPlease Exit to Close it and Open new App.\n</string>
    <string name="err_inactive_user">Your registration has not been approved. Please try loggin in after you got confirmation from us.</string>
    <string name="err_unauthorized_access">You are not authorized to access this service.\nPlease contact your service provider.</string>
    <string name="err_no_internet">ErrorCode: E 024 \nCould not connect with your Network, check your Network settings and try again later.</string>
    <string name="err_low_balance">You do not have sufficient balance \nPlease recharge and try again</string>
    <string name="war_code_buy_before_watch">WAR_03_BUY</string>
    <string name="war_buy_before_watch">Please buy this channel to watch</string>
    <string name="war_code_upgrade_before_watch">WAR_04_BUY</string>
    <string name="war_upgrade_before_watch">Please upgrade this channelTemp to watch</string>
    <string name="err_code_server_unreachable">ERR_SETTINGS_02</string>
    <string name="err_code_json_exception">ERR_JSON_01</string>
    <string name="uner_maintainence">Sorry! Server is under Maintenance!!! \nPlease try again later. \nIf this message is continuously seen, Please contact your Service Provider</string>
    <string name="err_server_unreachable">No Network access or Server Issue \n Please Check your network connectivity \n and contact server administrator</string>
    <string name="war_code_playback_idle">WAR_05_IDLE</string>
    <string name="war_playback_idle">The system detected that the playback has paused for some time. Please OK Button 
        to disable automatic exit and continue.\n Else, the playback will stop shortly.</string>
    <string name="war_code_no_channels_in_db">WAR_06_SELECT_CHANNEL</string>
    <string name="war_no_channels_in_db">Please choose any channel to Play! Press Home to exit</string>
    <string name="err_code_media_error">MEDIA_ERROR</string>
    <string name="err_media_error">Couldnt play the requested channel. Either network issue or it was down from the source itself, Please try again later </string>
    <string name="update_message">An update of this version of App available. Please press OK button in your remote to update your app now.</string>
    <string name="extra_link_url">livetv/internet</string>
    <string-array name="loading">
        <item>Loading</item>
    </string-array>
    <string name="txt_empty" />
    <string name="err_code_epg_not_found">ERR_07_NO_EPG</string>
    <string name="err_code_dvr_not_found">ERR_07_NO_DVR</string>
    <string name="err_epg_not_found">Sorry, EPG of requested channel is not available</string>
    <string name="err_dvr_not_found">Sorry, DVR of requested channel is not available</string>
    <string name="btn_ok">OK</string>
    <string name="dvr_time_text">\u0020:\u0020</string>
    <string name="message_permissions"><![CDATA[AndroidTV LiveTV needs an access to your <b>Extenal Storage</b>.]]></string>
    <string name="channel_logo">Contains link to channel images</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="font_exo_semi_bold">Exo2-SemiBold.otf</string>
    <string name="font_exo_regular">Exo2-Regular_0.otf</string>
    <string name="font_exo_medium">Exo2-Medium.otf</string>
    <string name="font_exo_Light">Exo2-Light.otf</string>
    <string name="font_exo_Bold">Exo2-Bold.otf</string>
    <string name="font_helvetica_bold">Helvetica_Neu_Bold.ttf</string>
    <string name="font_helvetica_lt">HelveticaNeuL.ttf</string>
    <string name="font_helvetica_medium">Helvetica_Neue_Medium.ttf</string>
    <string name="font_helvetica_regular">HelveticaNeue.ttf</string>
    <string name="epg">EPG</string>
    <string name="dvr">DVR</string>
    <string name="set_fav">Set Fav</string>
    <string name="bought">BOUGHT</string>
    <string name="session_expired">Your previous session expired.Please re-login</string>
    <string name="channel_rm_fav">has been removed from favorites</string>
    <string name="channel_set_fav">has been added to favorites</string>
    <string name="no_category">No Categories Found</string>
    <string name="all_channels">All Channels</string>
    <string name="no_channel_found">Sorry , No associated channel found for given number.</string>
    <string name="err_autologin">Some Error Occurred During AutoLogin ,please re-login again.</string>
    <string name="no_channels_found">No Channels Found For given category.</string>
    <string name="unexpected_intent_action">Unexpected intent action: <xliff:g id="action">%1$s</xliff:g></string>
    <string name="enable_random_adaptation">Enable random adaptation</string>
    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>
    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
    <string name="error_drm_unknown">An unknown DRM error occurred</string>
    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>
</resources>