<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <LinearLayout
        android:id="@+id/loadingLinearyLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_black"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="90dp"
            android:alpha="0.5"
            android:layout_height="90dp"
            android:layout_marginBottom="25dp"
            android:contentDescription="@string/app_icon"
            android:src="@drawable/live_tv" />

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:theme="@style/RedAccent"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="22dp" />

        <TextView
            android:id="@+id/connectionStatusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:padding="5dp"
            android:text="@string/loading_app"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            android:visibility="visible" />

        <TextView
            android:id="@+id/txt_version_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/label_version"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/splash_container"
        android:layout_width="wrap_content"
        android:padding="5dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
</FrameLayout>