<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_error"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#00000000"
    android:gravity="center">


    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/custom_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        app:indicatorName="BallSpinFadeLoaderIndicator"

        />


    <FrameLayout
        android:id="@+id/custom_dialog_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:background="#00000000">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/round_shape"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginEnd="8dp"
            tools:ignore="RtlHardcoded">

            <androidtv.livetv.stb.ui.custom_views.CustomTextView
                android:id="@+id/dialog_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_horizontal"
                android:text="@string/error"
                app:fontAssetName="@string/font_helvetica_regular"
                android:textColor="#dadada"
                android:textSize="25sp" />

            <View
                android:id="@+id/view_below_mac"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/view_line" />

            <LinearLayout
                android:id="@+id/mac_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <androidtv.livetv.stb.ui.custom_views.CustomTextView
                    android:id="@+id/macaddress_fixed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/mac_address"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#dadada"
                    app:fontAssetName="@string/font_helvetica_regular"
                    android:textStyle="bold" />

                <androidtv.livetv.stb.ui.custom_views.CustomTextView
                    android:id="@+id/macaddress_variable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_weight="2"
                    android:text="@string/empty_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#dadada"
                    app:fontAssetName="@string/font_helvetica_regular"
                    android:layout_marginEnd="20dp" />

                <androidtv.livetv.stb.ui.custom_views.CustomTextView
                    android:id="@+id/app_version_fixed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="2"
                    android:text="@string/app_version"
                    app:fontAssetName="@string/font_helvetica_regular"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#dadada"
                    android:textStyle="bold"
                    android:layout_marginStart="20dp" />

                <androidtv.livetv.stb.ui.custom_views.CustomTextView
                    android:id="@+id/app_version_variable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/empty_text"
                    app:fontAssetName="@string/font_helvetica_regular"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#dadada" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/error_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="15dp"
                    />


                <androidtv.livetv.stb.ui.custom_views.CustomTextView
                    android:id="@+id/message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textColor="#dadada"
                    android:textSize="16sp"
                    app:fontAssetName="@string/font_helvetica_regular"
                    android:layout_margin="10dp"
                    android:visibility="visible" />
            </LinearLayout>

            <androidtv.livetv.stb.ui.custom_views.CustomTextView
                android:id="@+id/txt_error_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_horizontal"
                android:padding="10dp"
                app:fontAssetName="@string/font_helvetica_regular"
                android:text="ERROR CODE 98978"
                android:textColor="#dadada" />

            <View
                android:id="@+id/view_above_button"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/view_line" />



            <LinearLayout
                android:id="@+id/button_layout"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/positive"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/button_round_shape"
                    android:focusable="true"
                    android:padding="5dp"
                    android:text="@string/positive"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@drawable/package_dialog_button_textcolor" />


                <Button
                    android:id="@+id/neutral"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/button_round_shape"
                    android:focusable="true"
                    android:padding="5dp"
                    android:text="@string/neutral"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@drawable/package_dialog_button_textcolor" />


                <Button
                    android:id="@+id/negative"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/button_round_shape"
                    android:focusable="true"
                    android:padding="5dp"
                    android:text="@string/negative"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@drawable/package_dialog_button_textcolor" />
            </LinearLayout>


        </LinearLayout>

        <ImageButton
            android:id="@+id/closeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:background="@drawable/selector_close_dialog"
            android:clickable="true"
            android:focusable="true" />
    </FrameLayout>


</RelativeLayout>
